<resources>
    <string name="app_name">Airsoft</string>
    <string name="title_activity_members">MembersActivity</string>
    <string name="Statistic">Статистика</string>
    <string name="plays_results">Результаты игр</string>
    <string name="team_list">Состав команды</string>
    <string name="bastardos_inmortales">Bastardos Inmortales</string>
    <string name="add_new_team_member">Добавить нового участника команды</string>
    <string name="FIO">ФИО:</string>
    <string name="position">Должность</string>
    <string name="player_edit">Редактирование информации об игроке</string>
    <string name="nickname">Позывной:</string>
    <string name="game_class">Класс</string>
    <string name="weapons_inf">Информация об оружии</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="addgame">Добавить игру</string>
    <string name="place">Место</string>
    <string name="winner">Победитель</string>
    <string name="teams">Команды</string>
    <string name="to_main">На главную</string>
    <string name="game_date">Дата</string>
    <string name="new_game">Новая игра</string>
    <string name="equipment_info">Снаряжение:</string>
    <string name="new_game_create">Создание новой игры</string>
    <string name="title_activity_test_recycle">TestRecycle</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Winner">Победитель</string>
    <string name="ChageDate">Изменить дату</string>
    <string name="ChageTime">Изменить время</string>
    <string name="Map">Место проведения</string>
    <string name="MemberInfo">Информация об игроке</string>
    <string name="GameInfo">Информация об игре</string>
    <string name="title_activity_members_recycler">MembersRecyclerActivity</string>
    <string name="title_activity_games_recycler">GamesRecyclerActivity</string>
    <string name="title_activity_new_game_recycler">NewGameRecyclerActivity</string>
    <string name="distribution_by_teams">Распределение по командам:</string>
    <string name="FIO_must_be_filled_in">Поле ФИО должно быть заполнено</string>
    <string name="Nickname_must_be_filled_in">Поле Позывной должно быть заполнено</string>
    <string name="GameDataTime_text">Дата и время игры</string>
    <string name="AddNewPlayer">Добавление нового игрока</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="Members">Список игроков</string>
    <string name="Games">Список игр</string>
    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="backgroundPic">Фон приложения</string>
    <string name="contacts">Контакты:</string>
    <string name="no_info">Нет информации</string>
    <string name="birthdate">Дата рождения:</string>
    <string name="team">Команда:</string>
    <string name="team_description">Описание команды</string>
    <string name="title_activity_maps">Map</string>
</resources>
