<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/multicam"
    tools:context=".Activities.NewMemberActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/new_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/AddNewPlayer"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"

                />

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/person_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/FIO"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/nickname"
            android:inputType="text"
            tools:ignore="Autofill,LabelFor"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/person_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/position"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/arsenal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:hint="@string/equipment_info"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/person_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/buttonStyleBorderSand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/person_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/buttonStyleBorderSand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
