<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamesActivity">

    <Button
        android:id="@+id/add_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="43dp"
        android:text="@string/addgame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout

        android:id="@+id/tableGames"
        android:layout_width="355dp"
        android:layout_height="412dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_game"
        tools:context=".MembersActivity">

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_gamedate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:text="@string/gamedate"
                    android:textAlignment="center"
                    android:textSize="20sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_place"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/place"
                    android:textAlignment="center"
                    android:textSize="20sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_winner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/winner"
                    android:textAlignment="center"
                    android:textSize="20sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_teams"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/teams"
                    android:textAlignment="center"
                    android:textSize="20sp"

                    />
            </LinearLayout>


        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/button_back_games"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="265dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableGames" />

</androidx.constraintlayout.widget.ConstraintLayout>