<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewGameRecyclerActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        style="@style/background_multicam"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/multicam" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/game_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/new_game_create"
            android:textAlignment="center"
            android:textSize="25sp"

            />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_new_game_recycler" />

    <!--        android:layout_marginStart="136dp"-->
<!--        android:layout_marginTop="324dp"-->



    <Button
        android:id="@+id/game_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/buttonStyleBorderSand"
        android:layout_gravity="bottom"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/game_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="324dp"
        android:text="@string/save"
        style="@style/buttonStyleBorderSand"
        android:layout_gravity="bottom|end"

         />

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:layout_margin="@dimen/fab_margin"-->
<!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>