<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_game_recycler"
    tools:context=".NewGameRecyclerActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/currentDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"

            android:textSize="18sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="5dp"

            >

            <Button
                android:id="@+id/timeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setTime"
                android:text="@string/ChageTime" />

            <Button
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setDate"
                android:text="@string/ChageDate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"


            android:padding="5dp"

            >

            <TextView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Map"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/maps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="5dp"

            >

            <TextView
                android:id="@+id/textView_winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Winner"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/teams"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_distribution_by_teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:text="@string/distribution_by_teams"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="22sp"

            />


        <ScrollView
            android:id="@+id/scroll_member_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/game_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_new_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView_distribution_by_teams"
                tools:ignore="MissingConstraints" />

        </ScrollView>




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
