<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationPersonInfo">

    <ImageView
        android:id="@+id/background_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        style="@style/background_multicam"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/multicam" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/person_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Заполните информацию о себе"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"

                />

        </com.google.android.material.appbar.AppBarLayout>

        <Switch
            android:id="@+id/switch_to_org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="Я организатор игр" />


        <EditText
            android:id="@+id/person_fio_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/FIO"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor"
            android:padding="15dp"
            android:imeOptions="actionNext"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/birthday_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:hint="Дата рождения"
            android:inputType="date"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText

            android:id="@+id/nickname_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/nickname"
            android:inputType="text"
            tools:ignore="Autofill,LabelFor"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>




        <EditText
            android:id="@+id/person_position_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="Класс (штурмовик, снайпер ...)"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor"
            android:padding="15dp"
            android:imeOptions="actionNext"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>


        <EditText
            android:id="@+id/arsenal_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:hint="@string/equipment_info"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

    <Button
        android:id="@+id/person_info_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Далее"
        style="@style/buttonStyleBorderSand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>